; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/nscd/extr_cacheplcs.c_cache_queue_policy_get_last_item.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/nscd/extr_cacheplcs.c_cache_queue_policy_get_last_item.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cache_policy_item_ = type { i32 }
%struct.cache_policy_ = type { i32 }
%struct.cache_queue_policy_ = type { i32 }

@cache_queue_policy_head_ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.cache_policy_item_* (%struct.cache_policy_*)* @cache_queue_policy_get_last_item to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.cache_policy_item_* @cache_queue_policy_get_last_item(%struct.cache_policy_* %0) #0 {
  %2 = alloca %struct.cache_policy_*, align 8
  %3 = alloca %struct.cache_queue_policy_*, align 8
  store %struct.cache_policy_* %0, %struct.cache_policy_** %2, align 8
  %4 = call i32 @TRACE_IN(%struct.cache_policy_item_* (%struct.cache_policy_*)* @cache_queue_policy_get_last_item)
  %5 = load %struct.cache_policy_*, %struct.cache_policy_** %2, align 8
  %6 = bitcast %struct.cache_policy_* %5 to %struct.cache_queue_policy_*
  store %struct.cache_queue_policy_* %6, %struct.cache_queue_policy_** %3, align 8
  %7 = call i32 @TRACE_OUT(%struct.cache_policy_item_* (%struct.cache_policy_*)* @cache_queue_policy_get_last_item)
  %8 = load %struct.cache_queue_policy_*, %struct.cache_queue_policy_** %3, align 8
  %9 = getelementptr inbounds %struct.cache_queue_policy_, %struct.cache_queue_policy_* %8, i32 0, i32 0
  %10 = load i32, i32* @cache_queue_policy_head_, align 4
  %11 = call i64 @TAILQ_LAST(i32* %9, i32 %10)
  %12 = inttoptr i64 %11 to %struct.cache_policy_item_*
  ret %struct.cache_policy_item_* %12
}

declare dso_local i32 @TRACE_IN(%struct.cache_policy_item_* (%struct.cache_policy_*)*) #1

declare dso_local i32 @TRACE_OUT(%struct.cache_policy_item_* (%struct.cache_policy_*)*) #1

declare dso_local i64 @TAILQ_LAST(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
